force-app/main/default/objects/PricebookEntry/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Book Entries</relationshipLabel>
    <relationshipName>Price_Book_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>