force-app/main/default/objects/PricebookEntry/fields/Contract_Inheritance__c.field-meta.xml
<CustomField>
    <fullName>Contract_Inheritance__c</fullName>
    <label>Contract Inheritance</label>
    <length>32</length>
    <type>Text</type>
</CustomField>