force-app/main/default/objects/PricebookEntry/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>