force-app/main/default/objects/PricebookEntry/fields/Item_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Item_Contract_Price__c</fullName>
    <label>Item Contract Price</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Currency</type>
</CustomField>