force-app/main/default/objects/PricebookEntry/fields/Item_Price_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Item_Price_Conversion__c</fullName>
    <label>Item Price Conversion</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>