force-app/main/default/objects/PricebookEntry/fields/PricebookEntryExternalID__c.field-meta.xml
<CustomField>
    <fullName>PricebookEntryExternalID__c</fullName>
    <description>Unique Pricebook Entry ID matching to as400 - CustomerNumber+ItemCode+ContractStartDate</description>
    <externalId>true</externalId>
    <label>PriceEntryExternalID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>