force-app/main/default/objects/PricebookEntry/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <label>Pricing Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>